--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,10 @@
         android:theme="@style/Theme.Group5_final"
         tools:targetApi="31">
         <activity
+            android:name=".Dashboard"
+            android:exported="false"></activity>
+
+        <activity
             android:name=".messaging.InboxActivity"
             android:exported="false" />
         <activity
