•	Adjusted the Manifest and Login Logic: 	•	Added null-checks in MainActivity.java to prevent crashes when reading password and user data from Firebase. 	•	Implemented fallback logic for user roles if none found, ensuring the app still runs smoothly. 	•	Improved the Signup Flow: 	•	Added role verification in Signup.java to ensure a role (e.g., Artist or Listener) must be selected. 	•	Checked user inputs (e.g., ensuring passwords match and emails are valid) to prevent crashes due to invalid input. 	•	Enabled Scrolling in the Layout: 	•	Added android:fillViewport="true" to the ScrollView so it allows scrolling when content exceeds the screen height. 	•	Increased the bottom padding in the layout so that the “Sign In” button at the bottom can be fully scrolled into view. 	•	Moved padding and margins around to ensure the vertical content fits and scrolls as intended. 	•	Adjusted the Profile Picture Display: 	•	Removed forced circular cropping to allow the entire image to fit within the small profile picture boundaries. 	•	Used adjustViewBounds="true" and scaleType="fitCenter" to display the entire image proportionally within the defined space, ensuring no crucial parts are cut off. 	•	General Cleanup and Usability Improvements: 	•	Replaced certain attributes (like paddingHorizontal) with paddingStart and paddingEnd for better layout consistency. 	•	Ensured no overlapping or obstructive views would prevent scrolling or user interaction.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+<manifest
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    package="edu.northeastern.group5_final"
     xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_MEDIA_AUDIO" />
-
 
     <application
         android:allowBackup="true"
@@ -16,6 +17,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Group5_final"
         tools:targetApi="31">
+
         <activity
             android:name=".Dashboard"
             android:exported="false">
@@ -24,21 +26,27 @@
         <activity
             android:name=".messaging.InboxActivity"
             android:exported="false" />
+
         <activity
             android:name=".SearchActivity"
             android:exported="false" />
+
         <activity
             android:name=".loginPage"
             android:exported="false" />
+
         <activity
             android:name=".Signup"
             android:exported="false" />
+
         <activity
             android:name=".PlayActivity"
             android:exported="false" />
+
         <activity
             android:name=".PlayListActivity"
             android:exported="false" />
+
         <activity
             android:name=".MainActivity"
             android:exported="true">
